--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>hello welcome to my repository</h1>
 
     <form action="">
-        <input type="text" placeholder="enter your name and class">
+        <input type="text" placeholder="enter your name ">
+        <input type="text" placeholder="enter your class">
+        <input type="text" placeholder="enter your age">
+        <input type="text" placeholder="enter your phone number">
     </form>
     
 </body>
